--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav{
+  position: fixed;
+  top: 0;
+  height: 2.2rem;
+  width: 100%;
+  padding: 8px;
+  padding-left: 40px;
+  display: flex;
+  font-weight: 600;
+  align-items: center;
+  font-size: 1.4rem;
+}
+
+.nav-link{
+  color: black;
+  text-decoration: none;
 }
